--- a/app/src/main/res/layout/setcard.xml
+++ b/app/src/main/res/layout/setcard.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginEnd="50dp"
+    android:paddingEnd="40dp"
+    android:paddingStart="40dp"
     android:layout_marginStart="50dp"
     android:gravity="center"
     android:orientation="horizontal"
@@ -20,6 +22,7 @@
         android:fontFamily="@font/qanelas"
         android:singleLine="true"
         android:textSize="24sp"
+        android:inputType="numberDecimal"
         android:background="@android:color/transparent"
         tools:text="8" />
     <TextView
@@ -39,6 +42,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/qanelas"
         android:singleLine="true"
+        android:inputType="numberDecimal"
         android:background="@android:color/transparent"
         android:textSize="24sp"
         tools:text="50"/>
