--- a/app/src/main/res/menu/save.xml
+++ b/app/src/main/res/menu/save.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-<item android:id="@+id/reset"
-    android:title="@string/reset"
-    app:showAsAction="always"
-    android:icon="@drawable/ic_icons8_synchronize"/>
+    <item android:id="@+id/save"
+        android:title="@string/save"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_save_black_24dp"/>
 </menu>
