added widget, adjusted images, started Work activity

--- a/app/src/main/res/layout/musclecard.xml
+++ b/app/src/main/res/layout/musclecard.xml
@@ -49,7 +49,7 @@
         tools:text="Mechanism" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/spinnerz"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/exercise_name"
