--- a/app/src/main/res/layout/activity_working_out.xml
+++ b/app/src/main/res/layout/activity_working_out.xml
@@ -5,10 +5,80 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="vyvital.fitz.WorkingOutActivity">
-<TextView
-    android:id="@+id/test"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:text="123"/>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/miniLinearLayout"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:gravity="end"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnStart"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/greenz"
+                android:elevation="4dp"
+                android:fontFamily="@font/qanelas"
+                android:text="@string/start"
+                android:theme="@style/ButtonStyle" />
+
+            <Button
+                android:id="@+id/btnPause"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorPrimary"
+                android:elevation="4dp"
+                android:fontFamily="@font/qanelas"
+                android:text="@string/pause"
+                android:theme="@style/ButtonStyle" />
+
+
+        </LinearLayout>
+        <Chronometer
+            android:id="@+id/chrono"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/qanelasbold"
+            android:textSize="60sp"
+            android:format="%S"
+            />
+        <!--<TextView-->
+            <!--android:id="@+id/stopwatch"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_weight="2"-->
+            <!--android:gravity="center"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:fontFamily="@font/qanelasbold"-->
+            <!--android:text="00:00"-->
+            <!--android:textSize="58sp"-->
+            <!--/>-->
+    </LinearLayout>
+
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/workoutRV"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+    </android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
