--- a/app/src/main/res/layout/draw_header.xml
+++ b/app/src/main/res/layout/draw_header.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="5dp"
+        android:fontFamily="sans-serif"
         android:text="@string/sarahha_eren"
         android:textColor="@color/colorAccent"
         android:textStyle="bold" />
@@ -31,6 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:fontFamily="sans-serif"
         android:layout_marginTop="5dp"
         android:text="@string/sarraheren_gmail_com"
         android:textColor="@color/colorAccent"
