fixed strings and padding

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,11 +10,9 @@
         <item>"\"FIT is not a destination, it is a way of life.\""</item>
         <item>"\"Sweat is magic. Cover yourself in it daily to grant you wishes.\""</item>
         <item>"\"Workout. Eat Well. Be Patient. our body will reward you.\""</item>
-        <item>"\"Every day is another chance to get STRONGER to eat BETTER to live HEALTHIER and to
-            be the best version of YOU.\""
+        <item>"\"Every day is another chance to get STRONGER to eat BETTER to live HEALTHIER and to be the best version of YOU.\""
         </item>
-        <item>"\"My protein shake brings the boys to the yard. And they’re like: your muscles are
-            hard. Damn right, my muscles are hard. I could train ya, but I’d have to charge.\""
+        <item>"\"My protein shake brings the boys to the yard. And they’re like: your muscles are hard. Damn right, my muscles are hard. I could train ya, but I’d have to charge.\""
         </item>
     </array>
     <array name="Q">
@@ -29,34 +27,19 @@
     </array>
 
     <array name="A">
-        <item>"If you love training and maintaining a healthy lifestyle, Fitz will help you reach
-            your Goals! Whether It's fat loss, strength or maintaining your physic, from Beginner to
-            Elite, everyone can enjoy and let Fitz do the work.\nWe got you!"
+        <item>"If you love training and maintaining a healthy lifestyle, Fitz will help you reach your Goals! Whether It's fat loss, strength or maintaining your physic, from Beginner to Elite, everyone can enjoy and let Fitz do the work.\nWe got you!"
         </item>
-        <item>"The Program Manager will help you build your routine. You can add or edit workouts
-            with a click of a button, change default program or even remove with a swipe.\nYou can
-            then add the specific exercise you want and adjust the number of sets,weight and
-            repetitions.\nDon't forget to save the changes!"
+        <item>"The Program Manager will help you build your routine. You can add or edit workouts with a click of a button, change default program or even remove with a swipe.\nYou can then add the specific exercise you want and adjust the number of sets,weight and repetitions.\nDon't forget to save the changes!"
         </item>
-        <item>"Counting macros is perhaps the most useful thing for people wanting to reach their
-            health, fitness or weight loss goals.\nMacro is short for macronutrient, of which there
-            are three: protein, carbohydrates and fats. All foods are divided up into a combination
-            of these macros, and that’s how the calorie content is made up. Calorie and macro
-            counting is called flexible dieting.\nWe recommend using MyFitnessPal to log what you
-            eat, thus making it easy to keep on top of your macros."
+        <item>"Counting macros is perhaps the most useful thing for people wanting to reach their health, fitness or weight loss goals.\nMacro is short for macronutrient, of which there are three: protein, carbohydrates and fats. All foods are divided up into a combination of these macros, and that’s how the calorie content is made up. Calorie and macro counting is called flexible dieting.\nWe recommend using MyFitnessPal to log what you eat, thus making it easy to keep on top of your macros."
         </item>
-        <item>"We recommend to use your scale every morning after you empty your bladder, wearing as
-            little clothing as possible."
+        <item>"We recommend to use your scale every morning after you empty your bladder, wearing as little clothing as possible."
         </item>
-        <item>"We are continuously adding more.\nPlease let us know your favorite so we can add it
-            to the list.\nFitzHelp247@gmail.com"
+        <item>"We are continuously adding more.\nPlease let us know your favorite so we can add it to the list.\nFitzHelp247@gmail.com"
         </item>
-        <item>"In such cases, feel free to mail our team. Explain what went wrong, on which screen
-            of the app and which component/Button made it happen and we will be on
-            it!\nFitzHelp247@gmail.com"
+        <item>"In such cases, feel free to mail our team. Explain what went wrong, on which screen of the app and which component/Button made it happen and we will be on it!\nFitzHelp247@gmail.com"
         </item>
-        <item>"Please email our team at\nFitzHelp247@gmail.com\nWe love receiving feedback and new
-            ideas!"
+        <item>"Please email our team at\nFitzHelp247@gmail.com\nWe love receiving feedback and new ideas!"
         </item>
     </array>
 </resources>
