--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="center"
-        android:src="@drawable/gym" />
+        android:src="@drawable/gym"
+        android:contentDescription="@string/background_image" />
 
     <LinearLayout
         android:id="@+id/master_frame"
@@ -34,7 +35,8 @@
             android:layout_width="69dp"
             android:layout_height="59dp"
             android:layout_gravity="center"
-            android:background="@drawable/t1" />
+            android:background="@drawable/t1"
+            android:contentDescription="@string/app_icon" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_layout_email"
