--- a/app/src/main/res/layout/fragment_muscle_b.xml
+++ b/app/src/main/res/layout/fragment_muscle_b.xml
@@ -35,7 +35,8 @@
                     app:layout_collapseMode="parallax"
                     tools:ignore="UnusedAttribute"
                     tools:src="@drawable/tricep_t"
-                    tools:transitionName="@string/chest_trans" />
+                    tools:transitionName="@string/chest_trans"
+                    android:contentDescription="@string/body_part_image" />
             </LinearLayout>
 
         </android.support.design.widget.CollapsingToolbarLayout>
