--- a/app/src/main/res/layout/musclecard.xml
+++ b/app/src/main/res/layout/musclecard.xml
@@ -66,7 +66,8 @@
         android:layout_centerVertical="true"
         android:layout_marginEnd="5dp"
         android:elevation="4dp"
-        android:src="@drawable/ic_add_circle_outline_black_24dp" />
+        android:src="@drawable/ic_add_circle_outline_black_24dp"
+        android:contentDescription="@string/adding_exercise_to_workout_image" />
 
 
 </RelativeLayout>
