--- a/app/src/main/res/layout/programcard.xml
+++ b/app/src/main/res/layout/programcard.xml
@@ -26,7 +26,8 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/ic_delete_black_24dp" />
+            android:src="@drawable/ic_delete_black_24dp"
+            android:contentDescription="@string/delete_icon" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -117,7 +118,8 @@
             android:layout_alignParentTop="true"
             android:layout_marginEnd="16dp"
             android:layout_marginTop="14dp"
-            android:background="@drawable/ic_edit_black_24dp" />
+            android:background="@drawable/ic_edit_black_24dp"
+            android:contentDescription="@string/edit_icon" />
 
         <ImageView
             android:id="@+id/rib"
@@ -126,7 +128,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="5dp"
             android:src="@drawable/ribbon"
-            android:visibility="invisible" />
+            android:visibility="invisible"
+            android:contentDescription="@string/default_workout_sign" />
     </RelativeLayout>
 
 </FrameLayout>
