--- a/app/src/main/res/layout/setcard.xml
+++ b/app/src/main/res/layout/setcard.xml
@@ -31,7 +31,7 @@
         android:layout_marginBottom="2dp"
         android:layout_marginStart="8dp"
         android:singleLine="true"
-        android:text="reps - "
+        android:text="@string/reps"
         android:textSize="24sp" />
 
     <EditText
