--- a/app/src/main/res/layout/question_answer.xml
+++ b/app/src/main/res/layout/question_answer.xml
@@ -34,6 +34,7 @@
         app:layout_constraintTop_toBottomOf="@+id/question" />
 
     <Button
+        android:visibility="gone"
         android:id="@+id/myfitnesspalBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
