added banner ad

--- a/app/src/main/res/layout/activity_working_out.xml
+++ b/app/src/main/res/layout/activity_working_out.xml
@@ -53,9 +53,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="2"
             android:fontFamily="@font/qanelasbold"
-            android:format="%S"
+            android:format="0:00:0"
             android:gravity="center"
-            android:textSize="60sp" />
+            android:textSize="54sp" />
 
         <Button
             android:id="@+id/done"
@@ -69,14 +69,29 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/workoutRV"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toTopOf="@id/banner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
     </android.support.v7.widget.RecyclerView>
+
+    <com.google.android.gms.ads.AdView
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="SMART_BANNER"
+        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+        app:layout_constraintTop_toBottomOf="@id/workoutRV"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </com.google.android.gms.ads.AdView>
 
 </android.support.constraint.ConstraintLayout>
